--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,5 +1,8 @@
 <nav>
+  {%comment%}
     {% for item in site.data.navigation %}
       <a href="{{ item.link }}" {% if page.url == item.link %}class="current"{% endif %}>{{ item.name }}</a>
     {% endfor %}
+    {%endcomment%}
+    <a id="jsondata" download='list.json' href="">get json</a>
 </nav>
