--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,6 @@
   <body>
     {% include navigation.html %}
     {{ content }}
-  <!-- <script type="module" src="assets/js/list.js"></script> -->
+  <script type="module" src="assets/js/list.js"></script>
   </body>
 </html>
