--- a/_includes/list.html
+++ b/_includes/list.html
@@ -5,11 +5,14 @@
         {% assign sortStart = i.items | sort: "start" %}
         {% for i in sortStart %}
             <p> 
-                {% capture item %}
-                [{{i.date}}] [{{i.text}}]({{i.url}})  
-                {% if i.bonus %}~~{{i.bonus}}~~{% endif %}
-                {% endcapture %}
-                {{ item | markdownify }}
+                
+                [{{i.date}}] 
+                <a href="{{i.url}}" target="_blank">
+                    {{i.text}}</a>  
+                {% if i.bonus %}
+                    <br/><strike>{{i.bonus}}</strike>
+                {% endif %}
+                
             </p>    
         {% endfor %}   
     {% endfor %}
