--- a/_includes/embedplayer.html
+++ b/_includes/embedplayer.html
@@ -1,13 +1,13 @@
-<h4 id="currentEmbed"></h4>
 <div class="video-responsive">
     <iframe
-        id="embedplayer"
+        id="embed"
         width="853"
         height="480"
-        src="https://www.youtube.com/embed/lNvBbh5jDcA"
+        src=""
         frameBorder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
         allowFullScreen
         title="Embedded Video">
     </iframe>
+    <!--https://www.youtube.com/embed/lNvBbh5jDcA-->
 </div>
