--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -16,3 +16,12 @@
   width: 100%;
   position: absolute;
 }
+
+.moment-title {
+  color: white;
+  text-transform: uppercase;
+  font-weight: 500;
+  padding: .5rem .5rem .5rem;
+  font-size: 1rem;
+  line-height: 1.5;
+}
