--- a/_includes/item.html
+++ b/_includes/item.html
@@ -1,14 +1,19 @@
 <div class="card mb-3">
     <div class="card-body">
-        <div class="card-text float-start moment-title">
-            [{{i.date}}] {{i.text}}
+        <div class="d-flex justify-content-between">
+            <div class="card-text moment-title">
+                [{{i.date}}] {{i.text}}
+            </div>
+
+            <a  href="{{i.url}}" 
+                target="_blank" 
+                role="button" 
+                class="btn btn-link btn-lg d-flex align-items-center justify-content-center">
+                <i class="fas fa-external-link-alt fa-lg"></i>
+            </a>
         </div>
+        
     
-        <a  href="{{i.url}}" 
-            target="_blank" 
-            role="button" 
-            class="btn btn-link float-end btn-lg">
-            <i class="fas fa-external-link-alt"></i>
-        </a>        
+                
     </div>
   </div>
