--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -22,6 +22,13 @@
   text-transform: uppercase;
   font-weight: 500;
   padding: .5rem .5rem .5rem;
-  font-size: 1rem;
+  font-size: 1.5rem;
   line-height: 1.5;
+}
+
+.form-width {
+  width: 40%;
+  @media (max-width: 600px) {
+    width: 100%;
+  }
 }
