--- a/_includes/modal.html
+++ b/_includes/modal.html
@@ -2,7 +2,7 @@
   type="button"
   class="btn btn-link"
   data-mdb-toggle="modal"
-  data-mdb-target="#modalEmbed"
+  data-mdb-target="#modalNew"
 >
     open embeded player
 </button> -->
@@ -16,7 +16,7 @@
   aria-labelledby="modalEmbedLabel"
   aria-hidden="true"
 >
-  <div class="modal-dialog modal-dialog-centered modal-lg">
+  <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title" id="modalEmbedLabel">Add to moments.yml</h5>
