--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,5 +1,17 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-mdb-toggle="collapse"
+      data-mdb-target="#navbarNavAltMarkup"
+      aria-controls="navbarNavAltMarkup"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
+      <i class="fas fa-bars"></i>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav d-flex justify-content-center">
         {% for item in site.data.navigation %}
         <a class="nav-link 
@@ -7,6 +19,7 @@
         href="{{ item.link }}">{{item.name}}</a>
         {% endfor %}
       </div>
+    </div>
     </div>
   </div>
 </nav>
