--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -18,12 +18,15 @@
 }
 
 .moment-title {
-  color: white;
+  color: white !important;
   text-transform: uppercase;
   font-weight: 500;
   padding: .5rem .5rem .5rem;
-  font-size: 1.5rem;
   line-height: 1.5;
+  font-size: 1.4rem;
+  @media (max-width: 600px) {
+    font-size: 1.2rem;
+  }
 }
 
 .form-width {
@@ -35,4 +38,12 @@
 
 #newMoment {
   min-height: 10em;
+}
+
+.captions {
+  color: white;
+  font-weight: 500;
+  padding: .5rem .5rem .5rem;
+  line-height: 1.5;
+  font-size: 1.2rem;
 }
